package states;

public class SaltedState {
}
