package vehicle;

public class Cleaner {
}
