package vehicle;

public class Commuter {
}
