package vehicle;

public class SnowPlow {
}
