package Vehicle;

public interface IRouteHandler {
}
