package attachments;

public interface IAttachment {
}
